--- a/board/header_and_sidebar.css
+++ b/board/header_and_sidebar.css
@@ -7,12 +7,13 @@ body {
 }
 
 header {
-    position: sticky;
+    position: fixed;
     top: 0;
     padding: 20px 40px 20px 348px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
     background-color: white;
     z-index: 100;
+    width: 100%;
 }
 
 .headerContent {
