--- a/css/summaryResponsive.css
+++ b/css/summaryResponsive.css
@@ -23,7 +23,9 @@
     }
 }
 
-@media (max-width: 870px) {
+
+/* RESPONSIVENESS - TABLET */
+@media (max-width: 840px) {
     #right {
         padding-left: 10px;
     }
@@ -31,11 +33,6 @@
         gap: 10px;
         width: 250px;
     }
-}
-
-
-/* RESPONSIVENESS - TABLET */
-@media (max-width: 768px) {
     #greeting {
         display: none;
     }
@@ -144,7 +141,7 @@
     }
     #mainContentLine2Middle {
         height: 70px;
-        padding-left: 10px;
+        padding-left: 0px;
         margin-right: 5px;
     }
     #mainContentLine2Right {
@@ -183,6 +180,16 @@
     }
     #mainContentLine2 {
         width: 300px;
+    }
+    #mainContentLinePartLeft {
+        padding-right: 30px;
+        padding-left: 18px;
+    }
+    #mainContentLine2Middle {
+        margin-right: 22px;
+    }
+    #mainContentLine2Right {
+        padding-right: 35px;
     }
     #mainContentLine3 {
         width: 300px;
