--- a/style.css
+++ b/style.css
@@ -338,7 +338,8 @@ a{
 .legal-text-container,
 .help-text-container{
     display: flex;
-    max-height: calc(100vh - 100px);
+    position: relative;
+    top: 100px;
     overflow: auto;
     flex-direction: column;
 }
@@ -417,7 +418,7 @@ h2, h3{
     .legal-text,
     .help-text{
         left: 0px;
-        margin-left: 16px;
+        margin-left: 12px;
     }
     .header-legal{
         top: 44px;
@@ -430,7 +431,8 @@ h2, h3{
         font-size: 47px;
     }
     .legal-text-container{
-        max-height: calc(100vh - 164px);
+        max-height: calc(100vh - 184px);
+        overflow-x: hidden;
     }
     .legal-text-container h1{
         font-size: 28px;
@@ -566,5 +568,8 @@ h2, h3{
     .signup-container{
         width: 310px;
         top: 174px;
+    }
+    .legal-text-container h1{
+        font-size: 25px;
     }
 }
