--- a/css/header.css
+++ b/css/header.css
@@ -322,3 +322,24 @@ header {
         height: 20px;
     }
 }
+
+#landscape-warning {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.959);
+    color: white;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    text-align: center;
+}
+
+@media screen and (orientation: landscape) {
+    #landscape-warning{
+        display: flex;
+    }
+}
