--- a/css/addTask.css
+++ b/css/addTask.css
@@ -16,9 +16,10 @@ body {
     overflow-x: hidden;
 }
 
-/* .responsive-container {
-    margin-top: 100px;
-} */
+.responsive-container {
+    height: 424px;
+    display: flex;
+}
 
 h1 {
     font-size: 61px;
@@ -30,22 +31,22 @@ h1 {
 
 #content-box-left {
     width: 440px;
-    gap: 24px;
+    gap: 16px;
 }
 
 #content-box-right {
     width: 440px;
     gap: 24px;
+    height: 416px;
 }
 
 #content-box-container {
     width: 976.25px;
+    margin-left: 324px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-left: 324px;
-    position: relative;
 }
 
 .subtitle {
@@ -58,6 +59,7 @@ h1 {
 
 #title-container {
     position: relative;
+    height: 96px;
 }
 
 #title-input {
@@ -71,6 +73,10 @@ h1 {
     font-weight: 400;
     line-height: 24px;
     text-align: left;
+}
+
+#description-container {
+    height: 168px;
 }
 
 #textarea-input {
@@ -87,6 +93,7 @@ h1 {
 #assigned-container {
     position: relative;
     z-index: 1;
+    height: 80px;
 }
 
 .select-container {
@@ -112,9 +119,10 @@ h1 {
     margin-right: 48.25px;
 }
 
-/* #date-container {
+#date-container {
     position: relative;
-} */
+    height: 96px;
+}
 
 #date-input {
     width: 440px;
@@ -129,6 +137,10 @@ h1 {
 }
 
 /* Prio-Container */
+
+#prio-container {
+    height: 88px;
+}
 
 .prio-default-text-color {
     color: black;
@@ -225,7 +237,11 @@ h1 {
 
 /* Subtask-Container */
 
-#new-subtask-contaier {
+#substasks-container {
+    height: 80px;
+}
+
+#new-subtask-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -273,20 +289,22 @@ h1 {
 }
 
 #new-subtask-list-container {
-    margin-top: 16px;
+    background-color: #f6f7f8;
+    width: 100%;
 }
 
 #generated-subtask-list-container {
-    margin-left: 48.25px;
-    max-height: 80px;
-    overflow-y: scroll;
+    max-height: 96px;
+    overflow-y: auto;
+    position: absolute;
+    width: 440px;
 }
 
 .generatedSubtasks {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 16px;
+    padding: 12px 16px;
 }
 
 .generatedSubtasks:hover {
@@ -300,22 +318,30 @@ h1 {
 }
 
 #edit-subtask-container {
+    height: 24px;
     display: flex;
     justify-content: space-between;
     background: white;
     width: 100%;
     border-bottom: 1px solid #c9eaf8;
-    padding: 4px;
 }
 
 #generated-subtask-list-icons {
+    display: none;
     gap: 8px;
-    display: flex;
+}
+
+.showSubtaskIconsWhileEditing {
+    display: flex !important;
 }
 
 .edit-subtask-container-styling {
     border: none;
     width: 100%;
+}
+
+.subtaskListItemStyle {
+    margin-left: 40px;
 }
 
 .noHoverEffect:hover {
@@ -328,7 +354,6 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 4px;
 }
 
 #interactives-buttons-container {
@@ -463,9 +488,9 @@ h1 {
     width: 20px;
 }
 
-#selected-contacts-circle-container {
+/* #selected-contacts-circle-container {
     margin-top: 12px;
-}
+} */
 
 .circle {
     display: inline-flex;
@@ -488,6 +513,7 @@ h1 {
 
 #category-container {
     position: relative;
+    height: 80px;
 }
 
 #category-dropdown-arrow-container {
@@ -521,7 +547,6 @@ h1 {
 .flex-column {
     display: flex;
     flex-direction: column;
-    gap: 8px;
 }
 
 .flex-center-align {
@@ -539,6 +564,7 @@ h1 {
     transform: translate(-50%, -50%) translateY(100vh);
     transition: transform 0.3s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
+    display: none;
 }
 
 #success-message {
@@ -558,6 +584,7 @@ h1 {
 .slideInFromButton {
     opacity: 1;
     transform: translate(-50%, -50%) translateY(0);
+    display: block;
 }
 
 /* validation style */
@@ -598,8 +625,18 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     color: #d1d1d1;
 }
 
+/* General classes */
+
 .d-none {
     display: none;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.gap8px {
+    gap: 8px;
 }
 
 ::-webkit-scrollbar {
@@ -620,12 +657,12 @@ input[type="date"]:invalid::-webkit-datetime-edit {
 @media (max-width: 1360px) {
     body {
         margin-left: 0;
-        overflow-y: scroll;
     }
 
     .responsive-container {
         display: block !important;
-        margin-top: 224px;
+        margin-top: 208px;
+        width: 100%;
     }
 
     h1 {
@@ -670,40 +707,16 @@ input[type="date"]:invalid::-webkit-datetime-edit {
     #interactives-buttons-and-required-container {
         width: calc(100% - 80px);
         position: fixed;
-        margin-top: 758px;
+        bottom: 80px;
+        /* margin-top: 758px; */
         z-index: 99;
         background-color: #f6f7f8;
-        padding-bottom: 16px;
+        /* padding-bottom: 16px; */
     }
 
     #content-box-left,
     #content-box-right {
         width: 100%;
-    }
-
-    #title-container {
-        height: 83px;
-    }
-
-    #description-container {
-        height: 131px;
-    }
-
-    #assigned-container {
-        height: 75px;
-        margin-bottom: 16px;
-    }
-
-    #prio-container {
-        height: 88px;
-    }
-
-    #category-container {
-        height: 75px;
-    }
-
-    #substasks-container {
-        height: 83px;
     }
 
     #title-input,
@@ -742,16 +755,16 @@ input[type="date"]:invalid::-webkit-datetime-edit {
         height: 88px;
     }
 
-    #new-subtask-list-container,
-    #generated-subtask-list-container {
-        overflow-y: scroll;
+    #new-subtask-list-container
+    /* #generated-subtask-list-container { */ {
+        width: 100%;
     }
 
     #category-dropdown-list {
         width: 100%;
     }
 
-    #new-subtask-contaier {
+    #new-subtask-container {
         padding: 8px 12px;
     }
 }
@@ -809,5 +822,11 @@ input[type="date"]:invalid::-webkit-datetime-edit {
 @media (max-width: 410px) {
     #required-span {
         font-size: 10px;
+    }
+
+    #interactives-buttons-and-required-container {
+        bottom: 80px;
+        margin-bottom: 0;
+        padding-bottom: 0;
     }
 }
