--- a/css/addTask.css
+++ b/css/addTask.css
@@ -590,13 +590,14 @@ h1 {
 /* addTask submit icon */
 
 .style-effects-success-message-container {
-    position: absolute;
-    top: 40%;
+    position: fixed;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) translateY(100vh);
     transition: transform 0.3s ease-in-out, opacity 0.5s ease-in-out;
     opacity: 0;
     display: none;
+    z-index: 11;
 }
 
 #success-message {
@@ -850,6 +851,16 @@ input[type="date"]:invalid::-webkit-datetime-edit {
         position: relative;
         left: 0;
         margin-bottom: 0;
+    }
+
+    #success-message {
+        height: 74px;
+        width: 262px;
+        justify-content: center;
+    }
+
+    #succes-img {
+        display: none;
     }
 }
 
